After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 678514 - search results not displayed
search results not displayed
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: general
3.5.x
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-06-21 00:35 UTC by Matthias Clasen
Modified: 2012-06-21 09:46 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Matthias Clasen 2012-06-21 00:35:28 UTC
While testing the new non-animated transition from overview to search, I noticed that regardless what I type in the entry, I just get an empty gray window. No search results appear.
Comment 1 Bastien Nocera 2012-06-21 09:46:35 UTC
Caused by some overeager code removal