shell: Fix search results not appearing

Introduced in commit d382c42e5ce9b834456b8cda80bddea65b0639c1 by
some overeager code removal.

https://bugzilla.gnome.org/show_bug.cgi?id=678514